--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,13 @@
   </properties>
 
   <dependencies>
-    <dependency>
+  <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
     <version>6.14.3</version>
+    <scope>compile</scope>
 </dependency>
+
 
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
